<resources>
    <string name="app_name" translatable="false">TubApp</string>
    <string name="title_activity_main" translatable="false">TubApp</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="nav_schedules">Schedules</string>
    <string name="nav_map">Map</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_category_other">Other</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_header_title">Urban Transports Bourg-en-Bresse</string>
    <string name="log_error">Error :</string>
    <string name="added_fav">Added to favorites</string>
    <string name="removed_fav">Removed from favorites</string>
    <string name="error_fetching_data">Error while fetching data from the server</string>
    <string name="retrofit_error_title" translatable="false">RetrofitError</string>
    <string name="main_activity" translatable="false">MainActivity</string>
    <string name="map_fragment" translatable="false">MapsFragment</string>
    <string name="imageview_description" translatable="false">imageview</string>
    <string name="utils_drawable" translatable="false">UtilsDrawable</string>
    <string name="error_drawing_line">Error while drawing the line</string>
    <string name="error_initializing_map">Error while initializing the map</string>
    <string name="error_loading_fragment">Error while loading the fragment</string>

</resources>
